<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MulAc">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="actionsmul"
        android:text="@string/button10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Multex6" />

    <EditText
        android:id="@+id/ErgebnisMul"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Multex3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/Multex2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewmul1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Multex6"
        app:layout_constraintStart_toEndOf="@+id/Multex5"
        app:layout_constraintTop_toTopOf="@+id/Multex6" />

    <TextView
        android:id="@+id/Multex3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewmul2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/ErgebnisMul"
        app:layout_constraintStart_toEndOf="@+id/Multex6"
        app:layout_constraintTop_toTopOf="@+id/Multex6" />

    <TextView
        android:id="@+id/Multex5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/textviewmul3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Multex6" />

    <TextView
        android:id="@+id/Multex6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/textviewmul4"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>