<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="actionsub"
        android:text="@string/button10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtextView5" />

    <EditText
        android:id="@+id/subEdit"
        android:layout_width="65dp"
        android:layout_height="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/subtextView3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/subtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtextview"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/subtextView5"
        app:layout_constraintStart_toEndOf="@+id/subtextView4"
        app:layout_constraintTop_toTopOf="@+id/subtextView5" />

    <TextView
        android:id="@+id/subtextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub3textview"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/subEdit"
        app:layout_constraintStart_toEndOf="@+id/subtextView5"
        app:layout_constraintTop_toTopOf="@+id/subtextView5" />

    <TextView
        android:id="@+id/subtextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/sub4textview"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/subtextView5" />

    <TextView
        android:id="@+id/subtextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/sub5textview"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>