<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Additionsac">


        <TextView
            android:id="@+id/ErgebnisAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/hey"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/ErgebnisAdd"
            app:layout_constraintStart_toEndOf="@+id/Zahl2Add"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ErgebnisAdd"
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/ErgebnisAddition"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/Zahl2Addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/textview1"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/Zahl2Add"
            app:layout_constraintStart_toEndOf="@+id/Zahl1Add"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Zahl1Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="240dp"
            android:text="@string/textview3"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Zahl2Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/textview4"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="actions"
            android:text="@string/button10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ErgebnisAddition" />


</androidx.constraintlayout.widget.ConstraintLayout>